<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_centerHorizontal="true"
    android:layout_marginLeft="20dp"
    android:layout_height="fill_parent">

    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/typeOfRestriction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Type of Restriction"
            android:textStyle="bold" />


        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/typeOfRestrictionRadioGroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/typeOfRestriction"
            android:orientation="vertical">


            <RadioButton
                android:id="@+id/timeLimitParking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Time Limit Parking" />

            <RadioButton
                android:id="@+id/noParking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="No Parking" />

            <RadioButton
                android:id="@+id/noStopping"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="No Stopping" />

            <RadioButton
                android:id="@+id/streetCleaning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Street Cleaning" />

            <RadioButton
                android:id="@+id/fireHydrant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Fire Hydrant" />

            <RadioButton
                android:id="@+id/permitParking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Permit Parking Districts" />

            <RadioButton
                android:id="@+id/disabledParking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Disabled Parking" />


            <RadioButton
                android:id="@+id/parkingMeter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Parking Meter" />
        </RadioGroup>


        <TextView
            android:id="@+id/costLabel"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/typeOfRestrictionRadioGroup"
            android:layout_toStartOf="@+id/cost"
            android:text="Cost:" />

        <EditText
            android:id="@+id/cost"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/typeOfRestrictionRadioGroup"
            android:layout_toStartOf="@+id/monday"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/dollarsLabel"
            android:layout_width="80sp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/costLabel"
            android:text="(dollars)" />

        <TextView
            android:id="@+id/perLabel"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/per"
            android:layout_alignBottom="@+id/per"
            android:layout_toEndOf="@+id/fromTime"
            android:text="per" />

        <EditText
            android:id="@+id/per"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/typeOfRestrictionRadioGroup"
            android:layout_toStartOf="@+id/minutesLabel"
            android:inputType="number" />

        <TextView
            android:id="@+id/minutesLabel"
            android:layout_width="80sp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/per"
            android:layout_alignBottom="@+id/per"
            android:layout_alignEnd="@+id/tuesday"
            android:text="minutes" />


        <TextView
            android:id="@+id/timeLimitLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/daysOfRestriction"
            android:layout_alignParentStart="true"
            android:text="Time Limit:" />

        <EditText
            android:id="@+id/timeLimitNumber"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cost"
            android:layout_toEndOf="@+id/dollarsLabel"
            android:inputType="number" />

        <Spinner
            android:id="@+id/timeLimitSpinner"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/timeLimitNumber"
            android:layout_alignBottom="@+id/timeLimitNumber"
            android:layout_toEndOf="@+id/perLabel"
            android:entries="@array/time_unit_array" />

        <TextView
            android:id="@+id/daysOfRestriction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/timeLimitSpinner"
            android:layout_marginTop="11dp"
            android:text="Days of restriction"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/sunday"
            android:layout_width="110sp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/daysOfRestriction"
            android:text="Sunday" />

        <CheckBox
            android:id="@+id/monday"
            android:layout_width="110sp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/daysOfRestriction"
            android:layout_toEndOf="@+id/sunday"
            android:text="Monday" />

        <CheckBox
            android:id="@+id/tuesday"
            android:layout_width="110sp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/monday"
            android:layout_alignBottom="@+id/monday"
            android:layout_toEndOf="@+id/monday"
            android:text="Tuesday" />

        <CheckBox
            android:id="@+id/wednesday"
            android:layout_width="110sp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tuesday"
            android:text="Wednesday" />

        <CheckBox
            android:id="@+id/thursday"
            android:layout_width="110sp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/wednesday"
            android:layout_toEndOf="@+id/wednesday"
            android:text="Thursday" />

        <CheckBox
            android:id="@+id/friday"
            android:layout_width="110sp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/monday"
            android:layout_toEndOf="@+id/thursday"
            android:text="Friday" />

        <CheckBox
            android:id="@+id/saturday"
            android:layout_width="110sp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/friday"
            android:text="Saturday" />

        <TextView
            android:id="@+id/lengthOfRestriction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/saturday"
            android:text="Length of restriction"
            android:textStyle="bold" />


        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/lengthOfRestrictionRadioGroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/lengthOfRestriction"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/allDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="All Day" />

            <RadioButton
                android:id="@+id/withinHoursOf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Within hours of: " />

        </RadioGroup>

        <TextView
            android:id="@+id/fromLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/lengthOfRestrictionRadioGroup"
            android:layout_marginTop="12dp"
            android:text="From:" />

        <EditText
            android:id="@+id/fromTime"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/fromLabel"
            android:layout_alignBottom="@+id/fromLabel"
            android:layout_toEndOf="@+id/fromLabel"
            android:ems="10"
            android:inputType="time" />


        <TextView
            android:id="@+id/toLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/toTime"
            android:layout_alignBottom="@+id/toTime"
            android:layout_toStartOf="@+id/toTime"
            android:text="To:" />

        <EditText
            android:id="@+id/toTime"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/parkingAngle"
            android:layout_alignEnd="@+id/headInImage"
            android:layout_marginEnd="15dp"
            android:ems="10"
            android:inputType="time" />

        <TextView
            android:id="@+id/parkingAngle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/fromTime"
            android:text="Parking Angle"
            android:textStyle="bold" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/parkingAngleRadioGroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/parkingAngle"
            android:layout_marginEnd="3dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/parallel"
                android:layout_width="110sp"
                android:layout_height="wrap_content"
                android:text="parallel" />

            <RadioButton
                android:id="@+id/angled"
                android:layout_width="110sp"
                android:layout_height="wrap_content"
                android:text="angled" />

            <RadioButton
                android:id="@+id/headIn"
                android:layout_width="110sp"
                android:layout_height="wrap_content"
                android:text="head in" />


        </RadioGroup>

        <ImageView
            android:id="@+id/parallelImage"
            android:layout_width="110sp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/parkingAngleRadioGroup"
            app:srcCompat="@drawable/parallel" />

        <ImageView
            android:id="@+id/angledImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/parkingAngleRadioGroup"
            android:layout_toEndOf="@+id/parallelImage"
            app:srcCompat="@drawable/angled" />


        <ImageView
            android:id="@+id/headInImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/parkingAngleRadioGroup"
            android:layout_toEndOf="@+id/angledImage"
            app:srcCompat="@drawable/headin" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="Submit" />

    </RelativeLayout>
</ScrollView>