<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/homeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="Home"
        android:textColor="@color/colorTitle"
        android:textSize="30dp"
        android:textStyle="bold" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_below="@+id/homeTitle"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/addRestrictionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Restriction"
        android:layout_alignBottom="@+id/mapView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:text="Tap on map to add a marker at the
location of parking restriction.
Then click the ADD RESTRICTION button."
        android:layout_below="@+id/mapView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp" />

</RelativeLayout>