...
        android:layout_alignBaseline="@+id/timeLimitNumberEditText"
        android:layout_toEndOf="@id/timeLimitNumberEditText"
        android:entries="@array/time_units" />


    <EditText
        android:id="@+id/customTypeText"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/timeLimitLabel"
        android:hint="@string/enter_custom_type" />


...
