<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/settingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="Settings"
        android:textColor="@color/colorTitle"
        android:textSize="30dp"
        android:textStyle="bold" />

    <Switch
        android:id="@+id/allowPushNotifications"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/settingsTitle"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:text="Allow Push Notifications"
        android:textSize="16dp" />

    <Switch
        android:id="@+id/allowSounds"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/allowPushNotifications"
        android:layout_below="@+id/allowPushNotifications"
        android:layout_marginTop="20dp"
        android:text="Allow Sounds"
        android:textSize="16dp" />

    <Switch
        android:id="@+id/locationSharing"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/allowSounds"
        android:layout_below="@+id/allowSounds"
        android:layout_marginTop="20dp"
        android:text="Location Sharing"
        android:textSize="16dp" />

    <Switch
        android:id="@+id/voiceSearch"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/locationSharing"
        android:layout_below="@+id/locationSharing"
        android:layout_marginTop="20dp"
        android:text="Voice Search"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/distanceUnitsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/voiceSearch"
        android:layout_below="@+id/voiceSearch"
        android:layout_marginTop="20dp"
        android:text="Distance Units"
        android:textSize="16dp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/distanceUnitsSpinner"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/voiceSearch"
        android:layout_alignTop="@+id/distanceUnitsLabel"
        android:entries="@array/distance_units_array" />

    <Switch
        android:id="@+id/offlineMaps"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/distanceUnitsLabel"
        android:layout_below="@+id/distanceUnitsSpinner"
        android:layout_marginTop="20dp"
        android:text="Offline Maps"
        android:textSize="16dp" />


</RelativeLayout>